--- a/.nova/Configuration.json
+++ b/.nova/Configuration.json
@@ -1,7 +1,7 @@
 {
-  "workspace.art_style" : 0,
-  "workspace.color" : 0,
-  "workspace.preview_append_paths" : false,
-  "workspace.preview_type" : "custom",
-  "workspace.preview_url" : "http:\/\/localhost:8888"
+  "workspace.art_style": 0,
+  "workspace.color": 0,
+  "workspace.preview_append_paths": false,
+  "workspace.preview_type": "custom",
+  "workspace.preview_url": "http://localhost:8888"
 }
