--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
-  "trailingComma": "none",
+  "trailingComma": "all",
   "singleQuote": true,
+  "semi": false,
   "plugins": ["prettier-plugin-astro", "prettier-plugin-tailwindcss"]
 }
