--- a/package.json
+++ b/package.json
@@ -6,19 +6,32 @@
     "start": "astro dev",
     "build": "ENABLE_VC_BUILD=1 astro build",
     "preview": "astro preview",
-    "lint": "eslint src --fix",
-    "format": "prettier --write .",
+    "lint": "eslint src/**/*.ts src/**/*.tsx *.ts *.mjs *.cjs",
+    "lint:fix": "eslint src/**/*.ts src/**/*.tsx *.ts *.mjs *.cjs --fix",
+    "format:write": "prettier --write .",
+    "format:check": "prettier --check  .",
     "prepare": "is-ci || husky install",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "test": "vitest"
   },
   "devDependencies": {
     "@astrojs/react": "^0.1.2",
     "@astrojs/tailwind": "^0.2.1",
     "@astrojs/vercel": "^0.2.1",
     "@tailwindcss/typography": "^0.5.2",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.2.0",
+    "@types/node": "^17.0.34",
+    "@typescript-eslint/eslint-plugin": "^5.24.0",
+    "@typescript-eslint/parser": "^5.24.0",
+    "@vitejs/plugin-react": "^1.3.2",
     "astro": "^1.0.0-beta.27",
     "autoprefixer": "^10.4.7",
-    "eslint-plugin-react": "^7.29.4",
+    "eslint": "^8.15.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "happy-dom": "^3.2.2",
     "husky": "^8.0.1",
     "is-ci": "^3.0.1",
     "lint-staged": "^12.4.1",
@@ -28,15 +41,20 @@
     "prettier-plugin-tailwindcss": "^0.1.11",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "typescript": "^4.6.4",
+    "vite-tsconfig-paths": "^3.4.1",
+    "vitest": "^0.12.6"
   },
   "dependencies": {
-    "prop-types": "^15.8.1",
     "ts-md5": "^1.2.11"
   },
   "lint-staged": {
-    "*.md|*.html|*.json|*.astro": [
+    "*.md|*.html|*.json|*.astro|*.ts|*.tsx|*.mjs|*.cjs": [
       "prettier --write"
+    ],
+    "*.ts|.tsx|.cjs|*.mjs": [
+      "eslint --fix"
     ]
   }
 }
