--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,36 +7,36 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js 16.15.0
-        uses: actions/setup-node@v1
+      - name: Use Bun latest
+        uses: xhyrom/setup-bun@v0.1.3
         with:
-          node-version: '16.15.0'
-      - run: npm ci
-      - run: ENABLE_VC_BUILD=1 npm run build
+          bun-version: latest
+      - run: bun install
+      - run: ENABLE_VC_BUILD=1 bun run build
         env:
           CI: true
   lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js 16.15.0
-        uses: actions/setup-node@v1
+      - name: Use Bun latest
+        uses: xhyrom/setup-bun@v0.1.3
         with:
-          node-version: '16.15.0'
-      - run: npm ci
-      - run: npm run lint
-      - run: npm run format:check
+          bun-version: latest
+      - run: bun install
+      - run: bun run lint
+      - run: bun run format:check
         env:
           CI: true
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js 16.15.0
-        uses: actions/setup-node@v1
+      - name: Use Bun latest
+        uses: xhyrom/setup-bun@v0.1.3
         with:
-          node-version: '16.15.0'
-      - run: npm ci
-      - run: npm run test
+          bun-version: latest
+      - run: bun install
+      - run: bun run test
         env:
           CI: true
