--- a/package.json
+++ b/package.json
@@ -16,36 +16,36 @@
     "update-dependencies": "npx npm-check-updates --upgrade && npm i"
   },
   "devDependencies": {
-    "@astrojs/react": "^0.4.2",
-    "@astrojs/tailwind": "^0.2.4",
-    "@astrojs/vercel": "^0.2.6",
+    "@astrojs/react": "^1.0.0",
+    "@astrojs/tailwind": "^1.0.0",
+    "@astrojs/vercel": "^1.0.0",
     "@tailwindcss/typography": "^0.5.4",
-    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.2.6",
-    "@types/node": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
-    "@vitejs/plugin-react": "^2.0.0",
-    "astro": "^1.0.0-beta.73",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.20.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/node": "^18.7.2",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
+    "@vitejs/plugin-react": "^2.0.1",
+    "astro": "^1.0.3",
+    "autoprefixer": "^10.4.8",
+    "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "happy-dom": "^6.0.4",
     "husky": "^8.0.1",
     "is-ci": "^3.0.1",
     "lint-staged": "^13.0.3",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.16",
     "prettier": "^2.7.1",
-    "prettier-plugin-astro": "^0.1.1",
-    "prettier-plugin-tailwindcss": "^0.1.12",
+    "prettier-plugin-astro": "^0.5.0",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.1.6",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.7.4",
     "vite-tsconfig-paths": "^3.5.0",
-    "vitest": "^0.18.1"
+    "vitest": "^0.21.1"
   },
   "dependencies": {
     "ts-md5": "^1.2.11"
