--- a/package.json
+++ b/package.json
@@ -16,39 +16,39 @@
     "update-dependencies": "npx npm-check-updates --upgrade && npm i"
   },
   "devDependencies": {
-    "@astrojs/react": "^1.0.0",
-    "@astrojs/tailwind": "^1.0.0",
-    "@astrojs/vercel": "^1.0.0",
-    "@tailwindcss/typography": "^0.5.4",
+    "@astrojs/netlify": "^1.2.0",
+    "@astrojs/react": "^1.2.1",
+    "@astrojs/tailwind": "^2.1.1",
+    "@tailwindcss/typography": "^0.5.7",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/node": "^18.7.2",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
-    "@vitejs/plugin-react": "^2.0.1",
-    "astro": "^1.0.3",
-    "autoprefixer": "^10.4.8",
-    "eslint": "^8.21.0",
+    "@types/node": "^18.11.7",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
+    "@vitejs/plugin-react": "^2.2.0",
+    "astro": "^1.5.3",
+    "autoprefixer": "^10.4.12",
+    "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "happy-dom": "^6.0.4",
+    "happy-dom": "^7.6.6",
     "husky": "^8.0.1",
     "is-ci": "^3.0.1",
     "lint-staged": "^13.0.3",
-    "postcss": "^8.4.16",
+    "postcss": "^8.4.18",
     "prettier": "^2.7.1",
-    "prettier-plugin-astro": "^0.5.0",
+    "prettier-plugin-astro": "^0.6.0",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.1.8",
-    "typescript": "^4.7.4",
-    "vite-tsconfig-paths": "^3.5.0",
-    "vitest": "^0.21.1"
+    "tailwindcss": "^3.2.1",
+    "typescript": "^4.8.4",
+    "vite-tsconfig-paths": "^3.5.2",
+    "vitest": "^0.24.3"
   },
   "dependencies": {
-    "ts-md5": "^1.2.11"
+    "ts-md5": "^1.3.1"
   },
   "lint-staged": {
     "*.md|*.html|*.json|*.astro|*.ts|*.tsx|*.mjs|*.cjs": [
