--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "ENABLE_VC_BUILD=1 astro build",
+    "build": "astro build",
     "preview": "astro preview",
     "lint": "eslint src/**/*.ts src/**/*.tsx *.ts *.mjs *.cjs",
     "lint:fix": "eslint src/**/*.ts src/**/*.tsx *.ts *.mjs *.cjs --fix",
