--- a/package.json
+++ b/package.json
@@ -16,38 +16,29 @@
     "update-dependencies": "npx npm-check-updates --upgrade && npm i"
   },
   "devDependencies": {
-    "@astrojs/tailwind": "^5.0.3",
-    "@astrojs/vercel": "^6.0.2",
-    "@solidjs/testing-library": "^0.8.4",
+    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.0.2",
     "@tailwindcss/typography": "^0.5.10",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/user-event": "^14.5.1",
-    "@types/node": "^20.10.4",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
-    "@vitejs/plugin-react": "^4.2.1",
-    "astro": "^4.0.4",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.55.0",
+    "@types/node": "^20.11.10",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
+    "astro": "^4.2.6",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "happy-dom": "^12.10.3",
-    "husky": "^8.0.3",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.7",
     "is-ci": "^3.0.1",
     "lint-staged": "^15.2.0",
-    "postcss": "^8.4.32",
-    "prettier": "^3.1.1",
-    "prettier-plugin-astro": "^0.12.2",
-    "prettier-plugin-tailwindcss": "^0.5.9",
-    "tailwindcss": "^3.3.6",
-    "typescript": "^5.3.3",
-    "vite-plugin-solid": "^2.8.0",
-    "vite-tsconfig-paths": "^4.2.2",
-    "vitest": "^1.0.4"
+    "postcss": "^8.4.33",
+    "prettier": "^3.2.4",
+    "prettier-plugin-astro": "^0.13.0",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@astrojs/solid-js": "^3.0.2",
-    "solid-js": "^1.8.7",
+    "solid-js": "^1.8.12",
     "ts-md5": "^1.3.1"
   },
   "lint-staged": {
