--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,3 @@
 {
-  "include": ["**/*.ts", "**/*.tsx"],
-  "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
-    "allowSyntheticDefaultImports": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "strict": true,
-    "allowJs": true,
-    "types": ["vite/client", "node"],
-    "baseUrl": ".",
-    "paths": {
-      "++components/*": ["src/components/*"],
-      "++layouts/*": ["src/layouts/*"],
-      "++types/*": ["src/types/*"],
-      "++functions/*": ["src/functions/*"],
-      "++images/*": ["src/images/*"]
-    },
-    "jsxImportSource": "solid-js"
-  }
+  "extends": "astro/tsconfigs/base",
 }
