--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,24 +7,32 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js 19
-        uses: actions/setup-node@v1
+      - name: Install Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: '19'
-      - run: npm install
-      - run: ENABLE_VC_BUILD=1 npm run build
+          node-version: 18
+      - name: Install pnpm 8
+        uses: pnpm/action-setup@v3
+        with:
+          version: 8
+      - run: pnpm install
+      - run: ENABLE_VC_BUILD=1 pnpm run build
         env:
           CI: true
   lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js 19
-        uses: actions/setup-node@v1
+      - name: Install Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: '19'
-      - run: npm install
-      - run: npm run lint
-      - run: npm run format:check
+          node-version: 18
+      - name: Install pnpm 8
+        uses: pnpm/action-setup@v3
+        with:
+          version: 8
+      - run: pnpm install
+      - run: pnpm run lint
+      - run: pnpm run format:check
         env:
           CI: true
