--- a/package.json
+++ b/package.json
@@ -13,32 +13,32 @@
     "prepare": "is-ci || husky install",
     "lint-staged": "lint-staged",
     "test": "vitest",
-    "update-dependencies": "npx npm-check-updates --upgrade && npm i"
+    "update-dependencies": "pnpm dlx npm-check-updates --upgrade && pnpm i"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vercel": "^7.0.2",
+    "@astrojs/vercel": "^7.3.4",
     "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "^20.11.10",
-    "@typescript-eslint/eslint-plugin": "^6.20.0",
-    "@typescript-eslint/parser": "^6.20.0",
-    "astro": "^4.2.6",
+    "@types/node": "^20.11.23",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "astro": "^4.4.6",
     "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "husky": "^9.0.7",
+    "husky": "^9.0.11",
     "is-ci": "^3.0.1",
-    "lint-staged": "^15.2.0",
-    "postcss": "^8.4.33",
-    "prettier": "^3.2.4",
+    "lint-staged": "^15.2.2",
+    "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "solid-js": "^1.8.12",
+    "solid-js": "^1.8.15",
     "ts-md5": "^1.3.1"
   },
   "lint-staged": {
