--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prepare": "is-ci || husky install",
     "lint-staged": "lint-staged",
     "test": "vitest",
-    "update-dependencies": "pnpm dlx npm-check-updates --upgrade && pnpm i"
+    "update-dependencies": "npx npm-check-updates --upgrade && pnpm i"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^5.1.0",
