--- a/package.json
+++ b/package.json
@@ -17,28 +17,28 @@
   },
   "devDependencies": {
     "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vercel": "^7.3.4",
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "^20.11.23",
-    "@typescript-eslint/eslint-plugin": "^7.1.0",
-    "@typescript-eslint/parser": "^7.1.0",
-    "astro": "^4.4.6",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.57.0",
+    "@astrojs/vercel": "7.7.2",
+    "@tailwindcss/typography": "^0.5.13",
+    "@types/node": "^20.14.12",
+    "@typescript-eslint/eslint-plugin": "^7.17.0",
+    "@typescript-eslint/parser": "^7.17.0",
+    "astro": "4.12.2",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "husky": "^9.0.11",
+    "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.3",
     "is-ci": "^3.0.1",
-    "lint-staged": "^15.2.2",
-    "postcss": "^8.4.35",
-    "prettier": "^3.2.5",
-    "prettier-plugin-astro": "^0.13.0",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "lint-staged": "^15.2.7",
+    "postcss": "^8.4.40",
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "tailwindcss": "^3.4.7",
+    "typescript": "^5.5.4"
   },
   "dependencies": {
-    "solid-js": "^1.8.15",
+    "solid-js": "^1.8.19",
     "ts-md5": "^1.3.1"
   },
   "lint-staged": {
