--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "devDependencies": {
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "7.7.2",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.8.0",
     "@tailwindcss/typography": "^0.5.13",
     "@types/node": "^20.14.12",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
@@ -27,6 +29,7 @@
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.8.0",
     "husky": "^9.1.3",
     "is-ci": "^3.0.1",
     "lint-staged": "^15.2.7",
