--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@astrojs/node": "^8.3.3",
     "solid-js": "^1.8.19",
     "ts-md5": "^1.3.1"
   },
