--- a/package.json
+++ b/package.json
@@ -13,29 +13,19 @@
     "lint-staged": "lint-staged",
     "test": "vitest",
     "prepare": "is-ci || husky",
-    "update-dependencies": "bunx @astrojs/upgrade;bunx npm-check-updates --upgrade && bun install"
+    "update-dependencies": "deno run -A npm:@astrojs/upgrade;deno run -A npm:npm-check-updates --upgrade && deno install"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^5.1.1",
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.10.0",
+    "@deno/astro-adapter": "^0.1.3",
     "@tailwindcss/typography": "^0.5.15",
-    "@types/node": "^22.5.4",
-    "@typescript-eslint/eslint-plugin": "^8.5.0",
-    "@typescript-eslint/parser": "^8.5.0",
     "astro": "^4.15.12",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.10.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.9.0",
     "husky": "^9.1.6",
     "is-ci": "^3.0.1",
     "lint-staged": "^15.2.10",
     "postcss": "^8.4.45",
-    "prettier": "^3.3.3",
-    "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.6.2"
   },
@@ -46,10 +36,10 @@
   },
   "lint-staged": {
     "*.md|*.html|*.json|*.astro|*.ts|*.tsx|*.mjs|*.cjs": [
-      "prettier --write"
+      "deno lint"
     ],
     "*.ts|.tsx|.cjs|*.mjs": [
-      "eslint --fix"
+      "deno fmt"
     ]
   }
 }
