--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,28 +15,19 @@ jobs:
       contents: read # Needed to clone the repository
 
     steps:
-      - name: Clone repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Install Deno
-        uses: denoland/setup-deno@v1
+      - uses: denoland/setup-deno@v2
         with:
-          deno-version: v1.x
-
-      - name: Install Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: lts/*
-
-      - name: Install step
-        run: "deno install"
-
-      - name: Build step
-        run: "deno task build"
+          deno-version: v2.x
+      - run: deno install --allow-scripts=npm:sharp@0.33.5
+      - run: deno lint
+      - run: deno fmt --check
+      - run: deno task build
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
         with:
-          project: "mvl"
-          entrypoint: "server/entry.mjs"
-          root: "dist"
+          project: 'mvl'
+          entrypoint: 'server/entry.mjs'
+          root: 'dist'
