--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "mvl",
   "version": "8.1.0",
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview",
-    "lint": "eslint src/**/*.ts *.mjs *.cjs",
-    "lint:fix": "eslint src/**/*.ts *.mjs *.cjs --fix",
-    "format:write": "prettier --write .",
+    "dev": "astro dev",
     "format:check": "prettier --check  .",
+    "format:write": "prettier --write .",
+    "lint": "eslint src/**/*.ts *.mjs *.cjs",
     "lint-staged": "lint-staged",
-    "test": "vitest",
+    "lint:fix": "eslint src/**/*.ts *.mjs *.cjs --fix",
     "prepare": "is-ci || husky",
+    "preview": "astro preview",
+    "start": "astro dev",
+    "test": "vitest",
     "update-dependencies": "bunx @astrojs/upgrade;bunx npm-check-updates --upgrade && bun install"
   },
   "devDependencies": {
@@ -40,8 +40,9 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
-    "@astrojs/node": "8.3.4",
+    "astro-sst": "2.43.5",
     "solid-js": "^1.9.2",
+    "sst": "3.2.18",
     "ts-md5": "^1.3.1"
   },
   "lint-staged": {
@@ -49,7 +50,7 @@
       "prettier --write"
     ],
     "*.ts|.tsx|.cjs|*.mjs": [
-      "eslint --fix"
+      "bun run lint"
     ]
   }
 }
