--- a/package.json
+++ b/package.json
@@ -40,9 +40,8 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
-    "astro-sst": "2.43.5",
+    "@astrojs/vercel": "^7.8.2",
     "solid-js": "^1.9.2",
-    "sst": "3.2.18",
     "ts-md5": "^1.3.1"
   },
   "lint-staged": {
