--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.17.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/bun": "^1.1.14",
+    "@types/eslint__eslintrc": "^2.1.2",
     "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "^8.18.1",
     "@typescript-eslint/parser": "^8.18.1",
