--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
-    "@astrojs/vercel": "8.0.2",
+    "@astrojs/netlify": "^6.1.0",
     "solid-js": "^1.9.4",
     "ts-md5": "^1.3.1"
   },
