--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "astro build",
     "dev": "astro dev",
     "format:check": "prettier --check  .",
-    "format:write": "prettier --write .",
+    "format": "prettier --write .",
     "lint": "eslint src/**/*.ts *.mjs *.cjs",
     "lint-staged": "lint-staged",
     "lint:fix": "eslint src/**/*.ts *.mjs *.cjs --fix",
