--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^12.5.0",
     "@astrojs/vercel": "^8.1.3",
     "solid-js": "^1.9.5",
     "ts-md5": "^1.3.1"
