--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.24.0",
+    "@flydotio/dockerfile": "^0.7.10",
     "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.4",
@@ -43,6 +44,7 @@
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.5.0",
+    "@astrojs/node": "^9.2.0",
     "@astrojs/vercel": "^8.1.3",
     "solid-js": "^1.9.5",
     "ts-md5": "^1.3.1"
